[package]
name = "caesar_cipher"
version = "0.1.0"
authors = ["Francisco Miamoto <fsmiamoto@gmail.com>"]
edition = "2018"

[[bin]]
name = "caesar"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.13"
regex = "1"
