[package]
name = "vernam_cipher"
version = "0.1.0"
authors = ["Francisco Miamoto <fsmiamoto@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[ bin ]]
name = "vernam"
path = "src/main.rs"

[dependencies]
structopt = "0.3.13"
